--- a/natours/package.json
+++ b/natours/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.12.3",
+    "morgan": "^1.10.0",
+    "slugify": "^1.5.0",
+    "validator": "^13.5.2"
   }
 }
