--- a/natours/.env
+++ b/natours/.env
@@ -4,3 +4,10 @@ USER=dustin
 DB_USER=dbUser
 DB_PASSWORD=DZuZcQ4G2nzykcit
 MONGO_URI=mongodb+srv://dbUser:DZuZcQ4G2nzykcit@natours.sffxf.mongodb.net/natours-db?retryWrites=true&w=majority
+JWT_SECRET=nnjnfjerERMFKremfKREfre23kNFK$mkmnMQPLEPMFDLMFMFFFRfrklwnj
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+EMAIL_USERNAME=8ad36ac20bb8de
+EMAIL_PASSWORD=ce6bedca5df22f
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=25
